[package]
name = "levent"
version = "0.1.0"
license = "unlicense"
description = "hydrus but better"
edition = "2021"

[dependencies]
iced = { git = "https://github.com/iced-rs/iced.git", branch = "master", default-features = false, features = ["pure", "image", "svg", "wgpu", "tokio", "default_system_font"] }
image = "0.24"


[package.metadata.nix]
# Toggle app flake output
app = true
# Toggle flake outputs that build (checks, package and app)
build = true